--- a/css/style.css
+++ b/css/style.css
@@ -75,8 +75,8 @@ header nav {
   width: 100%;
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
-  padding-left: 15px;
-  padding-right: 15px;
+  padding-left: 20px;
+  padding-right: 20px;
   display: flex;
   align-items: center;
   position: fixed;
@@ -260,7 +260,7 @@ section .box p {
 }
 .section .container {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(360px, 1fr));
   gap: 35px;
 }
 .section .container .contant {
@@ -398,7 +398,8 @@ section .box p {
 .filter ul {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+justify-content: space-evenly;
+     flex-wrap: wrap;
 }
 .filter ul li {
   padding: 7px 15px;
@@ -483,7 +484,7 @@ section .box p {
 }
 .blog .container .content-img {
   display: grid;
-  grid-template-columns: repeat(auto-fill,minmax(250px,1fr));
+  grid-template-columns: repeat(auto-fill,minmax(350px,1fr));
   gap: 20px;
 }
 .blog .content-img .card {
